@@ -96,7 +96,13 @@ def print_help():
     print_( _('Options:') )
     print_( _('  -h, --help              Show this help and exit.') )
     print_( _('  -f, --fullscreen        Start the application in fullscreen mode.') )
+    print_( _('  -s, --slideshow         Start the application in slideshow mode.') )
     print_( _('  -l, --library           Show the library on startup.') )
+    print_( _('  -m, --manga             Start the application in manga mode.') )
+    print_( _('  -d, --double-page       Start the application in double page mode.') )
+    print_( _('  -B, --zoom-best         Start the application with zoom set to best fit mode.') )
+    print_( _('  -W, --zoom-width        Start the application with zoom set to fit height.') )
+    print_( _('  -H, --zoom-height       Start the application with zoom set to fit width.') )
     print_( _('  -v, --version           Show the version number and exit.') )
 
     sys.exit(1)
@@ -163,14 +169,19 @@ def run():
     """Run the program."""
 
     fullscreen = False
+    slideshow = False
     show_library = False
+    manga_mode = False
+    double_page = False
+    zoom_mode = None
     open_path = None
     open_page = 1
 
     try:
         argv = portability.get_commandline_args()
-        opts, args = getopt.gnu_getopt(argv[1:], 'fhlvd',
-            ['fullscreen', 'help', 'library', 'version'])
+        opts, args = getopt.gnu_getopt(argv[1:], 'fsmdBWHhlv',
+            ['fullscreen', 'slideshow', 'manga', 'doublepage', 'zoom-best',
+            'zoom-width', 'zoom-height', 'help', 'library', 'version'])
 
     except getopt.GetoptError:
         print_help()
@@ -180,13 +191,32 @@ def run():
         if opt in ('-h', '--help'):
             print_help()
 
-        elif opt in ('-f', '--fullscreen'):
-            fullscreen = True
+        elif opt in ('-v', '--version'):
+            print_version()
 
         elif opt in ('-l', '--library'):
             show_library = True
-        elif opt in ('-v', '--version'):
-            print_version()
+
+        elif opt in ('-f', '--fullscreen'):
+            fullscreen = True
+
+        elif opt in ('-s', '--slideshow'):
+            slideshow = True
+
+        elif opt in ('-m', '--manga'):
+            manga_mode = True
+
+        elif opt in ('-d', '--double-page'):
+            double_page = True
+
+        elif opt in ('-B', '--zoom-best'):
+            zoom_mode = constants.ZOOM_MODE_BEST
+
+        elif opt in ('-W', '--zoom-width'):
+            zoom_mode = constants.ZOOM_MODE_WIDTH
+
+        elif opt in ('-H', '--zoom-height'):
+            zoom_mode = constants.ZOOM_MODE_HEIGHT
 
     if not os.path.exists(constants.DATA_DIR):
         os.makedirs(constants.DATA_DIR, 0700)
@@ -207,8 +237,10 @@ def run():
         open_path = preferences.prefs['path to last file']
         open_page = preferences.prefs['page of last file']
 
-    window = main.MainWindow(fullscreen=fullscreen, show_library=show_library,
-        open_path=open_path, open_page=open_page)
+    window = main.MainWindow(fullscreen = fullscreen, is_slideshow = slideshow,
+            show_library = show_library, manga_mode = manga_mode,
+            double_page = double_page, zoom_mode = zoom_mode,
+            open_path = open_path, open_page = open_page)
     deprecated.check_for_deprecated_files(window)
 
     signal.signal(signal.SIGTERM, lambda: gobject.idle_add(window.terminate_program))
